# lidarshooter

./: .gitignore  CMakeLists.txt  CMakePresets.json  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  optix_tracing.cpp  pyproject.toml  setup.py
.devcontainer/: .env_template  Dockerfile  Dockerfile-cuda  devcontainer-compose-cuda.json  devcontainer-compose.json  devcontainer.json  docker-compose-cuda.yml  docker-compose.yml
.devcontainer/ubuntu/: devcontainer-ubuntu-cuda.json  devcontainer-ubuntu.json  docker-compose-ubuntu.yml
.devcontainer/windows/: devcontainer-windows.json  docker-compose-windows.yml
app/: CMakeLists.txt  embree_test.cpp  find_ground.cpp  las2pcd.cpp  testing_ground.cpp  yolo3d_app.cpp  yolo3d_las2pcd.cpp  yolo3d_rasterize.cpp
config/: hesai-pandar-XT-32-lidar_0000.json  hesai-pandar-XT-32-lidar_0001.json  transform-lidar_0000.json  transform-lidar_0001.json
examples/: CMakeLists.txt  gpuseg-example.cpp  kdtree-example.cpp  tiledb-example.cpp  wxapp-example.cpp
include/yolo3d/: yolo3d.hpp
mesh/: ben.gltf  ben.stl  ground.gltf  ground.stl
python/yolo3d/: __init__.py  _yolo3d.cpp
ros_ws/: README.md  build-optixir-module  build-ptx-module  hesai-pandar-XT-32.json  trajectory.json
ros_ws/src/: CMakeLists.txt
ros_ws/src/cmake/: BuildPTXFromSource.cmake
ros_ws/src/lidarshooter/: CMakeLists.txt  lidarshooter.launch  package.xml
ros_ws/src/lidarshooter/launch/: lidarshooter.launch
ros_ws/src/lidarshooter/msg/: AffineMeshMessage.msg  NamedPolygonMesh.msg  NamedTwist.msg  NamedTwistStamped.msg
ros_ws/src/lidarshooter/src/: .gitignore  AffineMesh.cpp  AffineMesh.hpp  CloudConverter.cpp  CloudConverter.hpp  CloudTransformer.cpp  CloudTransformer.hpp  DeviceRuntime.cpp  DeviceRuntime.hpp  EmbreeTracer.cpp  EmbreeTracer.hpp  Exceptions.hpp  FloatBytes.cpp  FloatBytes.hpp  Hit.cpp  Hit.hpp  ITracer.cpp  ITracer.hpp  IntBytes.cpp  IntBytes.hpp  LidarDevice.cpp  LidarDevice.hpp  LidarDeviceKernels.cu  LidarShooter.hpp  LidarShooter.hpp.in  MeshProjector.cpp  MeshProjector.hpp  MeshTransformer.cpp  MeshTransformer.hpp  OptixTracer.cpp  OptixTracer.hpp  OptixTracerConfig.hpp.in  OptixTracerModules.cu  OptixTracerModules.optixir  OptixTracerModules.ptx  PointCloudXYZIR.cpp  PointCloudXYZIR.hpp  Ray.hpp  TraceData.cpp  TraceData.hpp  (+21 more)
ros_ws/src/lidarshooter/src/LiDARShooterGUI/: CMakeLists.txt  main.cpp
ros_ws/src/lidarshooter/src/test/: AffineMesh_test.cpp  EmbreeTracer_test.cpp  LidarDevice_test.cpp  LidarShooterTesting.hpp.in  OptixTracer_test.cpp  TraceData_test.cpp
ros_ws/src/teleop_twist_keyboard/: CMakeLists.txt  package.xml  teleop_twist_keyboard.py  teleop_twist_keyboard_multi.py
src/: CMakeLists.txt  yolo3d.cpp
tests/: CMakeLists.txt  yolo3d_t.cpp
tests/python/: test_python_bindings.py
